# g-rump

./: .gitignore  .vercelignore  API-CONNECTION-STATUS.md  ARCHITECTURE-UPGRADE.md  ARCHITECTURE.md  BACKEND-CONNECTION-COMPLETE.md  CHECK-KNOWLEDGE-BASE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION-INDEX.md  DOCUMENTATION.md  EXPO-SETUP.md  FINISH-LINE-PROGRESS.md  GET-STARTED.md  GRUMP-AI-CLARIFICATIONS.md  GRUMP-COMPLETE-MASTER-DOCUMENT.md  IMPROVEMENTS-COMPLETE.md  IMPROVEMENTS.md  INSTALL-NODE.md  INTERFACE-BUILD-SUMMARY.md  PRODUCT-VISION.md  PROFITABLE-MODEL.md  QUICK-START-API.md  RAILWAY_DEPLOYMENT.md  README.md  ROOT-PACKAGE.md  SETUP-GITHUB-FOLDER.md  START-HERE.md  UPDATED-MONETIZATION-PLAN.md  UPGRADE-SUMMARY.md  ZENCODER_AI_AGENT_INSTRUCTIONS.md  app.json  grump.html  grumpprompt.md  package-lock.json  package.json  setup.ps1  setup.sh  start-all.ps1  start-all.sh  (+1 more)
grump-compiler/: .gitignore  100-PERCENT-COMPLETE.md  ANIMATION-PHILOSOPHY.md  ANIMATION-REASONING-INTEGRATION.md  ANIMATION-REASONING.md  BUILD-SUMMARY.md  COMPLETE-FEATURE-SUMMARY.md  COMPLETION-REPORT.md  Cargo.toml  EXAMPLES.md  FEATURE-IMPLEMENTATION-PLAN.md  FINAL-PUSH-SUMMARY.md  FOUNDATION-COMPLETE.md  IMPLEMENTATION-STATUS.md  LANGUAGE-EXTENSIONS.md  LATEST-IMPROVEMENTS.md  META-ENGINEERING.md  PERCEPTUAL-ANIMATION.md  PROGRESS-UPDATE.md  README.md  build-windows.ps1  compile-targets.ps1
grump-compiler/docs/: GETTING-STARTED.md
grump-compiler/examples/: animation-reasoning-example.grump  async-example.grump  behavior-tree-example.grump  debugger-example.grump  flappy.grump  grump-character-animations.grump  macro-example.grump  network-example.grump  package-example.grump  plugin-example.grump  shader-example.grump
grump-compiler/src/: error.rs  lib.rs
(+344 files in other folders)
